--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div class="container">
         <div class="row">
           <div class="col-xl-9 mx-auto">
-            <h1 class="mb-5">Start Connecting Right Now: All Ears! 100% Confidentiality Guaranteed!</h1>
+            <h1 class="mb-5">Start Connecting Right Now: All Ears!</h1>
           </div>
           <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
             <form>
@@ -66,8 +66,8 @@
               <div class="features-icons-icon d-flex">
                 <i class="icon-screen-desktop m-auto text-primary"></i>
               </div>
-              <h3>Fully Responsive</h3>
-              <p class="lead mb-0">This theme will look great on any device, no matter the size!</p>
+              <h3>Friend</h3>
+              <p class="lead mb-0">Need a wall to bounce of your ideas/concerns?</p>
             </div>
           </div>
           <div class="col-lg-4">
@@ -75,8 +75,8 @@
               <div class="features-icons-icon d-flex">
                 <i class="icon-layers m-auto text-primary"></i>
               </div>
-              <h3>Bootstrap 4 Ready</h3>
-              <p class="lead mb-0">Featuring the latest build of the new Bootstrap 4 framework!</p>
+              <h3>Life Coach/Mentor</h3>
+              <p class="lead mb-0">Looking to improve your life?</p>
             </div>
           </div>
           <div class="col-lg-4">
@@ -84,8 +84,8 @@
               <div class="features-icons-icon d-flex">
                 <i class="icon-check m-auto text-primary"></i>
               </div>
-              <h3>Easy to Use</h3>
-              <p class="lead mb-0">Ready to use with your own content, or customize the source files!</p>
+              <h3>Professional</h3>
+              <p class="lead mb-0">Consultation and get advice from Trained Professionals?</p>
             </div>
           </div>
         </div>
