--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Landing Page - We Listen</title>
+    <title>We Listen!</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -17,9 +17,14 @@
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
     <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
-
+    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet" type="text/css">
+    
     <!-- Custom styles for this template -->
     <link href="css/landing-page.min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+
+    <!-- Icon for Website Tab-->
+    <link rel="icon" href="LogoMakr_1qHIg5.png">
 
   </head>
 
@@ -28,7 +33,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-light bg-light static-top">
       <div class="container">
-        <a class="navbar-brand" href="#">We Listen</a>
+        <a class="navbar-brand" href="#">WE LISTEN</a>
         <a class="btn btn-primary" href="#">Sign In</a>
       </div>
     </nav>
@@ -39,13 +44,15 @@
       <div class="container">
         <div class="row">
           <div class="col-xl-9 mx-auto">
-            <h1 class="mb-5">Start Connecting Right Now: All Ears!</h1>
+            <h1 class="mb-5">Reach New Heights! </h1>
+            <h2>Let us show you how.</h2>
           </div>
           <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
-            <form>
+              <form method="POST" action="https://formspree.io/csuhendra@gmail.com">
               <div class="form-row">
                 <div class="col-12 col-md-9 mb-2 mb-md-0">
-                  <input type="email" class="form-control form-control-lg" placeholder="Enter your email...">
+                  
+                  <input type="email" name="_replyto" class="form-control form-control-lg" placeholder="Enter your email...">
                 </div>
                 <div class="col-12 col-md-3">
                   <button type="submit" class="btn btn-block btn-lg btn-primary">Sign up!</button>
@@ -64,28 +71,28 @@
           <div class="col-lg-4">
             <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
               <div class="features-icons-icon d-flex">
-                <i class="icon-screen-desktop m-auto text-primary"></i>
+                <i class="icon-star m-auto text-primary"></i>
               </div>
-              <h3>Friend</h3>
-              <p class="lead mb-0">Need a wall to bounce of your ideas/concerns?</p>
+              <h3>Famous? Yes.</h3>
+              <p class="lead mb-0">Our trusted directory of our Coaches contains many famous people.</p>
             </div>
           </div>
           <div class="col-lg-4">
             <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
               <div class="features-icons-icon d-flex">
-                <i class="icon-layers m-auto text-primary"></i>
+                <i class="icon-trophy m-auto text-primary"></i>
               </div>
-              <h3>Life Coach/Mentor</h3>
-              <p class="lead mb-0">Looking to improve your life?</p>
+              <h3>Experienced? Yes.</h3>
+              <p class="lead mb-0">All of our Coaches have been in the field at least over 10 years. </p>
             </div>
           </div>
           <div class="col-lg-4">
             <div class="features-icons-item mx-auto mb-0 mb-lg-3">
               <div class="features-icons-icon d-flex">
-                <i class="icon-check m-auto text-primary"></i>
+                <i class="icon-umbrella m-auto text-primary"></i>
               </div>
-              <h3>Professional</h3>
-              <p class="lead mb-0">Consultation and get advice from Trained Professionals?</p>
+              <h3>Knowledgeable? Yes.</h3>
+              <p class="lead mb-0">Our Coaches progressively push themselves to continually improve.</p>
             </div>
           </div>
         </div>
@@ -97,24 +104,24 @@
       <div class="container-fluid p-0">
         <div class="row no-gutters">
 
-          <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-1.jpg');"></div>
+          <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/beauty-black-background-black-dress-1435833.jpg');"></div>
           <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-            <h2>Fully Responsive Design</h2>
-            <p class="lead mb-0">When you use a theme created by Start Bootstrap, you know that the theme will look great on any device, whether it's a phone, tablet, or desktop the page will behave responsively!</p>
+            <h2>Don't Get Suffocated with Issues!</h2>
+            <p class="lead mb-0">Let us help you come up for air! Reach New Heights!</p>
           </div>
         </div>
         <div class="row no-gutters">
-          <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/bg-showcase-2.jpg');"></div>
+          <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/blur-bright-bulbs-131023.jpg');"></div>
           <div class="col-lg-6 my-auto showcase-text">
-            <h2>Updated For Bootstrap 4</h2>
-            <p class="lead mb-0">Newly improved, and full of great utility classes, Bootstrap 4 is leading the way in mobile responsive web development! All of the themes on Start Bootstrap are now using Bootstrap 4!</p>
+            <h2>You are Not Alone!</h2>
+            <p class="lead mb-0">Share your ideas, your passion, and your questions freely!</p>
           </div>
         </div>
         <div class="row no-gutters">
-          <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-3.jpg');"></div>
+          <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/beautiful-cute-face-1170654.jpg');"></div>
           <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-            <h2>Easy to Use &amp; Customize</h2>
-            <p class="lead mb-0">Landing Page is just HTML and CSS with a splash of SCSS for users who demand some deeper customization options. Out of the box, just add your content and images, and your new landing page will be ready to go!</p>
+            <h2>Feel Liberated!</h2>
+            <p class="lead mb-0">Appreciate more of what you have within and around you!</p>
           </div>
         </div>
       </div>
@@ -127,23 +134,23 @@
         <div class="row">
           <div class="col-lg-4">
             <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-              <img class="img-fluid rounded-circle mb-3" src="img/testimonials-1.jpg" alt="">
-              <h5>Margaret E.</h5>
-              <p class="font-weight-light mb-0">"This is fantastic! Thanks so much guys!"</p>
+              <img class="img-fluid rounded-circle mb-3" src="img/tom_cruise.jpg" alt="">
+              <h5>Tom C.</h5>
+              <p class="font-weight-light mb-0">"New inquiries to have a session with me has been non stop! The count of my social media followers has reached a new record."</p>
             </div>
           </div>
           <div class="col-lg-4">
             <div class="testimonial-item mx-auto mb-5 mb-lg-0">
               <img class="img-fluid rounded-circle mb-3" src="img/testimonials-2.jpg" alt="">
-              <h5>Fred S.</h5>
-              <p class="font-weight-light mb-0">"Bootstrap is amazing. I've been using it to create lots of super nice landing pages."</p>
+              <h5>Homer S.</h5>
+              <p class="font-weight-light mb-0">"This platform has connected me with a coach and a friend that helped me battle my alcoholism and continue to support me. I have been sober over 99 days now."</p>
             </div>
           </div>
           <div class="col-lg-4">
             <div class="testimonial-item mx-auto mb-5 mb-lg-0">
               <img class="img-fluid rounded-circle mb-3" src="img/testimonials-3.jpg" alt="">
-              <h5>Sarah	W.</h5>
-              <p class="font-weight-light mb-0">"Thanks so much for making these free resources available to us!"</p>
+              <h5>Paris H.</h5>
+              <p class="font-weight-light mb-0">"I was depressed because of my social media status. I was coached to let go of unnecessary issues and focus only on I and the people I care and care about me. Connect with Tom C."</p>
             </div>
           </div>
         </div>
@@ -159,10 +166,10 @@
             <h2 class="mb-4">Ready to get started? Sign up now!</h2>
           </div>
           <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
-            <form>
+              <form method="POST" action="https://formspree.io/csuhendra@gmail.com">
               <div class="form-row">
                 <div class="col-12 col-md-9 mb-2 mb-md-0">
-                  <input type="email" class="form-control form-control-lg" placeholder="Enter your email...">
+                  <input type="email" name="_replyto" class="form-control form-control-lg" placeholder="Enter your email...">
                 </div>
                 <div class="col-12 col-md-3">
                   <button type="submit" class="btn btn-block btn-lg btn-primary">Sign up!</button>
@@ -196,7 +203,7 @@
                 <a href="#">Privacy Policy</a>
               </li>
             </ul>
-            <p class="text-muted small mb-4 mb-lg-0">&copy; Your Website 2018. All Rights Reserved.</p>
+            <p class="text-muted small mb-4 mb-lg-0">&copy; WE LISTEN 2018. All Rights Reserved.</p>
           </div>
           <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
             <ul class="list-inline mb-0">
